syntax = "proto3";

package pylon.rpc.discord.v1.api;
option java_multiple_files = true;
option go_package = "up.lol/pylon/rpc/go/rpc/discord/v1/api";

import "discord/v1/model.proto";
import "google/wrappers.proto";

message ApiError {
  uint32 code = 1;
  string message = 2;
}

// Modify Guild

message ModifyGuildRequest {
  fixed64 guild_id = 1 [jstype = JS_STRING];
  Body body = 2;

  message Body {
    google.protobuf.StringValue name = 1;
    google.protobuf.StringValue region = 2;
    google.protobuf.UInt32Value verification_level = 3;
    google.protobuf.UInt32Value default_message_notifications = 4;
    google.protobuf.UInt32Value explicit_content_filter = 5;
    google.protobuf.UInt64Value afk_channel_id = 6;
    google.protobuf.UInt32Value afk_timeout = 7;
    google.protobuf.StringValue icon = 8;
    google.protobuf.UInt64Value owner_id = 9;
    google.protobuf.StringValue splash = 10;
    google.protobuf.StringValue banner = 11;
    google.protobuf.UInt64Value system_channel_id = 12;
    google.protobuf.UInt64Value rules_channel_id = 13;
    google.protobuf.UInt64Value public_updates_channel_id = 14;
    google.protobuf.UInt64Value preferred_locale = 15;
  }
}

message ModifyGuildResponse {
  pylon.rpc.discord.v1.model.GuildData response = 1;
}

// Create Guild Channel

message CreateGuildChannelRequest {
  fixed64 guild_id = 1 [jstype = JS_STRING];
  Body body = 2;

  message Body {
    string name = 1;
    pylon.rpc.discord.v1.model.ChannelData.ChannelType type = 2;
    google.protobuf.StringValue topic = 3;
    google.protobuf.UInt32Value bitrate = 4;
    google.protobuf.UInt32Value user_limit = 5;
    google.protobuf.UInt32Value rate_limit_per_user = 6;
    google.protobuf.UInt32Value position = 7;
    repeated pylon.rpc.discord.v1.model.ChannelData
        .ChannelPermissionOverwriteData permission_overwrites = 8;
    google.protobuf.UInt64Value parent_id = 9;
    google.protobuf.BoolValue nsfw = 10;
  }
}

message CreateGuildChannelResponse {
  pylon.rpc.discord.v1.model.ChannelData response = 1;
}