syntax = "proto3";

package pylon.rpc.discord.v1.api;
option java_multiple_files = true;
option go_package = "up.lol/pylon/rpc/go/rpc/discord/v1/api";

import "discord/v1/model.proto";
import "google/protobuf/wrappers.proto";

message ApiError {
  uint32 status = 1;
  uint32 code = 2;
  string message = 3;
}

message SnowflakeValue { fixed64 value = 1 [jstype = JS_STRING]; }
message SnowflakeListValue { repeated fixed64 values = 1 [jstype = JS_STRING]; }

message PermissionsValue { fixed64 value = 1 [jstype = JS_STRING]; }

// Modify Guild

message ModifyGuildRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue region = 2;
  google.protobuf.UInt32Value verification_level = 3;
  google.protobuf.UInt32Value default_message_notifications = 4;
  google.protobuf.UInt32Value explicit_content_filter = 5;
  SnowflakeValue afk_channel_id = 6;
  google.protobuf.UInt32Value afk_timeout = 7;
  google.protobuf.StringValue icon = 8;
  SnowflakeValue owner_id = 9;
  google.protobuf.StringValue splash = 10;
  google.protobuf.StringValue banner = 11;
  SnowflakeValue system_channel_id = 12;
  SnowflakeValue rules_channel_id = 13;
  SnowflakeValue public_updates_channel_id = 14;
  SnowflakeValue preferred_locale = 15;
  google.protobuf.StringValue audit_log_reason = 16;
}

message ModifyGuildResponse {
  ApiError error = 1;
  pylon.rpc.discord.v1.model.GuildData response = 2;
}

// Create Guild Channel

message CreateGuildChannelRequest {
  string name = 1;
  pylon.rpc.discord.v1.model.ChannelData.ChannelType type = 2;
  google.protobuf.StringValue topic = 3;
  google.protobuf.UInt32Value bitrate = 4;
  google.protobuf.UInt32Value user_limit = 5;
  google.protobuf.UInt32Value rate_limit_per_user = 6;
  google.protobuf.UInt32Value position = 7;
  repeated pylon.rpc.discord.v1.model.ChannelData
      .ChannelPermissionOverwriteData permission_overwrites = 8;
  SnowflakeValue parent_id = 9;
  google.protobuf.BoolValue nsfw = 10;
  google.protobuf.StringValue audit_log_reason = 11;
}

message CreateGuildChannelResponse {
  ApiError error = 1;
  pylon.rpc.discord.v1.model.ChannelData response = 2;
}

// Modify Guild Channel Positions

message ModifyGuildChannelPositionsRequest {
  repeated ChannelPosition channel_positions = 1;

  message ChannelPosition {
    fixed64 id = 1 [jstype = JS_STRING];
    uint32 position = 2;
  }
}

message ModifyGuildChannelPositionsResponse { ApiError error = 1; }

// Add Guild Member

message AddGuildMemberRequest {
  fixed64 user_id = 1 [jstype = JS_STRING];
  string access_token = 2;
  google.protobuf.StringValue nick = 3;
  SnowflakeListValue roles = 4;
  google.protobuf.BoolValue mute = 5;
  google.protobuf.BoolValue deaf = 6;
}

message AddGuildMemberResponse {
  ApiError error = 1;
  bool added = 2;
}

// Modify Guild Member

message ModifyGuildMemberRequest {
  fixed64 user_id = 1 [jstype = JS_STRING];
  google.protobuf.StringValue nick = 2;
  SnowflakeListValue roles = 3;
  google.protobuf.BoolValue mute = 4;
  google.protobuf.BoolValue deaf = 5;
  SnowflakeValue channel_id = 6;
  google.protobuf.StringValue audit_log_reason = 7;
}

message ModifyGuildMemberResponse { ApiError error = 1; }

// Modify Current User Nick

message ModifyCurrentUserNickRequest { google.protobuf.StringValue nick = 1; }

message ModifyCurrentUserNickResponse { ApiError error = 1; }

// Add Guild Member Role

message AddGuildMemberRoleRequest {
  fixed64 user_id = 1 [jstype = JS_STRING];
  fixed64 role_id = 2 [jstype = JS_STRING];
  google.protobuf.StringValue audit_log_reason = 3;
}

message AddGuildMemberRoleResponse { ApiError error = 1; }

// Remove Guild Member Role

message RemoveGuildMemberRoleRequest {
  fixed64 user_id = 1 [jstype = JS_STRING];
  fixed64 role_id = 2 [jstype = JS_STRING];
  google.protobuf.StringValue audit_log_reason = 3;
}

message RemoveGuildMemberRoleResponse { ApiError error = 1; }

// Remove Guild Member

message RemoveGuildMemberRequest {
  fixed64 user_id = 1 [jstype = JS_STRING];
  google.protobuf.StringValue audit_log_reason = 2;
}

message RemoveGuildMemberResponse { ApiError error = 1; }

// Get Guild Bans

message GetGuildBansRequest { fixed64 user_id = 1 [jstype = JS_STRING]; }

message GetGuildBansResponse {
  ApiError error = 1;
  repeated pylon.rpc.discord.v1.model.GuildBan bans = 2;
}

// Get Guild Ban

message GetGuildBanRequest { fixed64 user_id = 1 [jstype = JS_STRING]; }

message GetGuildBanResponse {
  ApiError error = 1;
  pylon.rpc.discord.v1.model.GuildBan ban = 2;
}

// Create Guild Ban

message CreateGuildBanRequest {
  fixed64 user_id = 1 [jstype = JS_STRING];
  google.protobuf.UInt32Value delete_message_days = 2;
  google.protobuf.StringValue audit_log_reason = 3;
}

message CreateGuildBanResponse { ApiError error = 1; }

// Remove Guild Ban

message RemoveGuildBanRequest {
  fixed64 user_id = 1 [jstype = JS_STRING];
  google.protobuf.StringValue audit_log_reason = 3;
}

message RemoveGuildBanResponse { ApiError error = 1; }

// Create Guild Role

message CreateGuildRoleRequest {
  google.protobuf.StringValue name = 1;
  PermissionsValue permissions = 2;
  google.protobuf.UInt32Value color = 3;
  google.protobuf.BoolValue hoist = 4;
  google.protobuf.BoolValue mentionable = 5;
}

message CreateGuildRoleResponse {
  ApiError error = 1;
  pylon.rpc.discord.v1.model.RoleData role = 2;
}

// Modify Guild Role Positions

message ModifyGuildRolePositionsRequest {
  repeated RolePosition role_positions = 1;

  message RolePosition {
    fixed64 id = 1 [jstype = JS_STRING];
    uint32 position = 2;
  }
}

message ModifyGuildRolePositionsResponse {
  ApiError error = 1;
  repeated pylon.rpc.discord.v1.model.RoleData roles = 2;
}

// Modify Guild Role

message ModifyGuildRoleRequest {
  fixed64 role_id = 1 [jstype = JS_STRING];
  google.protobuf.StringValue name = 2;
  PermissionsValue permissions = 3;
  google.protobuf.UInt32Value color = 4;
  google.protobuf.BoolValue hoist = 5;
  google.protobuf.BoolValue mentionable = 6;
}

message ModifyGuildRoleResponse {
  ApiError error = 1;
  pylon.rpc.discord.v1.model.RoleData role = 2;
}

// Delete Guild Role

message DeleteGuildRoleRequest { fixed64 role_id = 1 [jstype = JS_STRING]; }

message DeleteGuildRoleResponse { ApiError error = 1; }

// Get Guild Prune Count

message GetGuildPruneCountRequest {
  google.protobuf.UInt32Value days = 1;
  SnowflakeListValue include_roles = 2;
}

message GetGuildPruneCountResponse { ApiError error = 1; }

// Begin Guild Prune

message BeginGuildPruneRequest {
  google.protobuf.UInt32Value days = 1;
  SnowflakeListValue include_roles = 2;
  google.protobuf.BoolValue compute_prune_count = 3;
}

message BeginGuildPruneResponse { ApiError error = 1; }

// Get Guild Voice Regions

message GetGuildVoiceRegionsRequest {}

message GetGuildVoiceRegionsResponse {
  ApiError error = 1;
  repeated string regions = 2;
}

// Get Guild Invites

message GetGuildInvitesRequest {}

message GetGuildInvitesResponse {
  ApiError error = 1;
  repeated pylon.rpc.discord.v1.model.InviteData invites = 2;
}