syntax = "proto3";

package pylon.rpc.gateway.v1.rest;
option java_multiple_files = true;
option go_package = "up.lol/pylon/rpc/go/rpc/gateway/v1/api";

import "discord/v1/api_model.proto";

service GatewayRest {
  rpc ModifyGuild(pylon.rpc.discord.v1.api.ModifyGuildRequest)
      returns(pylon.rpc.discord.v1.api.ModifyGuildResponse);
  rpc CreateGuildChannel(pylon.rpc.discord.v1.api.CreateGuildChannelRequest)
      returns(pylon.rpc.discord.v1.api.CreateGuildChannelResponse);
  rpc ModifyGuildChannelPositions(
      pylon.rpc.discord.v1.api.ModifyGuildChannelPositionsRequest)
      returns(pylon.rpc.discord.v1.api.ModifyGuildChannelPositionsResponse);
  rpc AddGuildMember(pylon.rpc.discord.v1.api.AddGuildMemberRequest)
      returns(pylon.rpc.discord.v1.api.AddGuildMemberResponse);
  rpc ModifyGuildMember(pylon.rpc.discord.v1.api.ModifyGuildMemberRequest)
      returns(pylon.rpc.discord.v1.api.ModifyGuildMemberResponse);
  rpc ModifyCurrentUserNick(
      pylon.rpc.discord.v1.api.ModifyCurrentUserNickRequest)
      returns(pylon.rpc.discord.v1.api.ModifyCurrentUserNickResponse);
  rpc AddGuildMemberRole(pylon.rpc.discord.v1.api.AddGuildMemberRoleRequest)
      returns(pylon.rpc.discord.v1.api.AddGuildMemberRoleResponse);
  rpc RemoveGuildMemberRole(
      pylon.rpc.discord.v1.api.RemoveGuildMemberRoleRequest)
      returns(pylon.rpc.discord.v1.api.RemoveGuildMemberRoleResponse);
  rpc RemoveGuildMember(pylon.rpc.discord.v1.api.RemoveGuildMemberRequest)
      returns(pylon.rpc.discord.v1.api.RemoveGuildMemberResponse);
  rpc GetGuildBans(pylon.rpc.discord.v1.api.GetGuildBansRequest)
      returns(pylon.rpc.discord.v1.api.GetGuildBansResponse);
  rpc GetGuildBan(pylon.rpc.discord.v1.api.GetGuildBanRequest)
      returns(pylon.rpc.discord.v1.api.GetGuildBanResponse);
  rpc CreateGuildBan(pylon.rpc.discord.v1.api.CreateGuildBanRequest)
      returns(pylon.rpc.discord.v1.api.CreateGuildBanResponse);
  rpc RemoveGuildBan(pylon.rpc.discord.v1.api.RemoveGuildBanRequest)
      returns(pylon.rpc.discord.v1.api.RemoveGuildBanResponse);
  rpc CreateGuildRole(pylon.rpc.discord.v1.api.CreateGuildRoleRequest)
      returns(pylon.rpc.discord.v1.api.CreateGuildRoleResponse);
  rpc ModifyGuildRolePositions(
      pylon.rpc.discord.v1.api.ModifyGuildRolePositionsRequest)
      returns(pylon.rpc.discord.v1.api.ModifyGuildRolePositionsResponse);
  rpc ModifyGuildRole(pylon.rpc.discord.v1.api.ModifyGuildRoleRequest)
      returns(pylon.rpc.discord.v1.api.ModifyGuildRoleResponse);
  rpc DeleteGuildRole(pylon.rpc.discord.v1.api.DeleteGuildRoleRequest)
      returns(pylon.rpc.discord.v1.api.DeleteGuildRoleResponse);
  rpc GetGuildPruneCount(pylon.rpc.discord.v1.api.GetGuildPruneCountRequest)
      returns(pylon.rpc.discord.v1.api.GetGuildPruneCountResponse);
  rpc BeginGuildPrune(pylon.rpc.discord.v1.api.BeginGuildPruneRequest)
      returns(pylon.rpc.discord.v1.api.BeginGuildPruneResponse);
  rpc GetGuildVoiceRegions(pylon.rpc.discord.v1.api.GetGuildVoiceRegionsRequest)
      returns(pylon.rpc.discord.v1.api.GetGuildVoiceRegionsResponse);
  rpc GetGuildInvites(pylon.rpc.discord.v1.api.GetGuildInvitesRequest)
      returns(pylon.rpc.discord.v1.api.GetGuildInvitesResponse);
}